2019-07-22  6.9.10-57 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-57, GIT revision 14...

2019-07-22  6.9.10-57 Cristy  <quetzlzacatenango@image...>
  * Heap-buffer-overflow in Postscript coder (reference
    https://github.com/ImageMagick/ImageMagick/issues/1644).

2019-07-20  6.9.10-56 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-56, GIT revision 14704:d0be203:20190720.

2019-07-20  6.9.10-56 Cristy  <quetzlzacatenango@image...>
  * Converting from PDF to PBM inverts the image (reference
    https://github.com/ImageMagick/ImageMagick/issues/1643).

2019-07-18  6.9.10-55 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-55, GIT revision 14700:faac202:20190718.

2019-07-08  6.9.10-55 Cristy  <quetzlzacatenango@image...>
  * Heap-buffer overflow (reference
    https://github.com/ImageMagick/ImageMagick/issues/1641).
  * PerlMagick test suite passes again (reference
    https://github.com/ImageMagick/ImageMagick/issues/1640).

2019-07-16  6.9.10-54 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-54, GIT revision 14684:41399a3:20190716

2019-07-08  6.9.10-54 Cristy  <quetzlzacatenango@image...>
  * Avoid divide by zero (reference
    https://github.com/ImageMagick/ImageMagick/issues/1629).
  * introducing MagickLevelImageColors() MagickWand method.
  * Transient problem with text placement with gravity (reference
    https://github.com/ImageMagick/ImageMagick/issues/1633).

2019-07-05  6.9.10-53 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-53, GIT revision 14625:70fb1c6:20190705.

2019-07-05  6.9.10-53 Cristy  <quetzlzacatenango@image...>
  * Coder heic.c build failure  (reference
    https://github.com/ImageMagick/ImageMagick6/issues/50).

2019-07-05  6.9.10-52 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-52, GIT revision 14623:672ff6a:20190705.
