@@ -4,6 +4,8 @@
 2019-07-22  6.9.10-57 Cristy  <quetzlzacatenango@image...>
   * Heap-buffer-overflow in Postscript coder (reference
     https://github.com/ImageMagick/ImageMagick/issues/1644).
+  * Correction to the ModulusAdd and ModulusSubtract composite op (reference
+    https://imagemagick.org/discourse-server/viewtopic.php?f=2&t=36413).
 
 2019-07-20  6.9.10-56 Cristy  <quetzlzacatenango@image...>
   * Release ImageMagick version 6.9.10-56, GIT revision 14704:d0be203:20190720.
